# Carla

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CARLA_MULTITHREADING_DESIGN.md  CARLA_PLUGIN_LOADING_FLOW.md  CLAUDE.md  MCP_AUDIO_ROUTING_GUIDE.md  PATCHBAY_IMPLEMENTATION_PLAN.md  SUMMARY.md  TODO.md  WORKFLOW_NOTES.md  carla_launcher.py  dev  opencode.json  pyproject.toml  setup_dispatcher.py  test_direct_patchbay_connect.py  test_dispatcher.py  test_parallel_graph.cpp  test_parallel_performance.py  test_parallel_processing.py  test_parallel_simple.cpp
.claude/: settings.json
.claude/hooks/: check-agents-md.sh
.claude/skills/audio-routing-workflow/: SKILL.md
.claude/skills/carla-effects-chains/: SKILL.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  compile_commands_setup.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
carla_mcp_dispatcher/: README.md  __init__.py  __main__.py  config.py  dispatcher_server.py  instance_manager.py  mcp_client.py  requirements.txt
cmake/: CMakeLists.txt  carla-host-plugin.pc  carla-native-plugin.pc  carla-standalone.pc  carla-utils.pc
docs/plans/: 2026-01-26-mcp-redesign-implementation.md  2026-01-26-mcp-redesign.md
source/: Makefile.mk
source/backend/: CarlaBackend.h  CarlaEngine.hpp  CarlaStandalone.cpp
source/bridges-plugin/: Makefile
source/frontend/: __init__.py  carla.py  carla_backend.py  carla_host.py
source/mcp/: Makefile
source/tests/: test_parallel_processing.cpp
source/utils/: CarlaBackendUtils.hpp
(+114 files in other folders)
