[project]
name = "carla-mcp"
version = "0.2.0"
description = "MCP server for comprehensive Carla audio plugin host control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.0",
    "python-osc>=1.7.1",
]

[project.scripts]
start = "carla_mcp.main:main"
carla-mcp = "carla_mcp.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["source/frontend/carla_mcp/tests"]
pythonpath = ["source/frontend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/frontend/carla_mcp"]
